<resources>
  <string name="app_name">Vias Verdes y Espacios Naturales Protegidos</string>
  <string name="section__vv_list">Itinerarios</string>
  <string name="section__map">Mapa</string>
  <string name="section__more_info">Más info</string>
  <string name="section__more_info__resources">Recursos</string>
  <string name="section__more_info__about">Acerca de…</string>
  <string name="section__more_info__legal_text">Avisos legales</string>
  <string name="section__settings">Ajustes</string>

  <string name="action__search">Buscar</string>
  <string name="action__filter">Filtrar</string>
  <string name="action__change_layer">Cambiar vista de mapa</string>
  <string name="action__layer__roadmap">Vista de carretera</string>
  <string name="action__layer__satellite">Vista satélite</string>
  <string name="action__layer__hybrid">Vista híbrida</string>
  <string name="action__layer__terrain">Vista de terreno</string>

  <string name="km">%1$.2f km</string>
  <string name="download_pdf">Descargar PDF</string>

  <string name="itinerary__see_in_map">Ver en mapa</string>
  <string name="itinerary__how_to_get">Como llegar</string>
  <string name="itinerary__localization">Localización</string>
  <string name="itinerary__length">Longitud</string>
  <string name="itinerary__user_type">Perfil de usuarios</string>
  <string name="itinerary__natura">Espacios Naturales y Red Natura 2000</string>
  <string name="itinerary__altimetric">Perfil altimétrico</string>
  <string name="itinerary__title">%1$s y sus Espacios Naturales Protegidos</string>

  <string name="map__marker_more_info">Haz click aquí para más info</string>

  <string name="logo__fundacion_biodiversidad">Este contenido forma parte del proyecto "Vías Verdes y Red Natura 2000" desarrollado con el apoyo de la Fundación Biodiversidad del Ministerio de Agricultura y Pesca, Alimentación y Medio Ambiente.</string>
  <string name="resources__vv_y_enp__title">Vias Verdes y Red Natura 2000: Divulgación de Espacios Naturales Protegidos y Geoparques a través de la Red Estatal de Vías Verdes</string>
  <string name="resources__vv_y_enp__content">El presente informe es el resultado de un Inventario de Espacios Naturales protegidos, Red Natura 2000 y red de Geoparques y su relación con la red de Vías Verdes. Su objetivo es conocer esta conexión entre ambos tipos de recursos ambientales y contribuir a su divulgación. Este inventario se enmarca en el proyecto "Vias Verdes y Red Natura 2000: Divulgación de Espacios Naturales Protegidos y Geoparques a través de la Red Estatal de Vías Verdes" que desarrolla el área de Vías Verdes de la FFE con el apoyo de la Fundación Biodiversidad del Ministerio de Agricultura y Pesca, Alimentación y Medio Ambiente.</string>
  <string name="resources__vv_y_2000__title">Mapa Vías Verdes y Red Natura 2000</string>
  <string name="resources__vv_y_2000__content">Divulgación de Espacios Naturales y Geoparques a través de la Red Estatal de Vías Verdes. Mayo 2018. Este mapa ha sido realizado con el apoyo de la Fundación Biodiversidad del Ministerio de Agricultura y Pesca, Alimentación y Medio Ambiente. IMPORTANTE: Para ver el mapa con más tamaño descarga en PDF y utiliza el zoom.</string>
  <string name="resources__caminos__title">Folleto divulgativo “Caminos Naturales y Vías Verdes de España”- Diciembre 2017</string>
  <string name="resources__caminos__content">Folleto diseñado y editado por el Ministerio de Agricultura y Pesca, Alimentación y Medio Ambiente junto con el Área de Vías Verdes de la Fundación de los Ferrocarriles Españoles. En él se aúnan los más de 12.000 kilómetros de Caminos Naturales y Vías Verdes de España repartidos en más más de 200 itinerarios no motorizados dedicados a uso senderista y ciclista. Estos itinerarios permiten el acercamiento de la población al medio natural, promoviendo el conocimiento de la naturaleza, así como el desarrollo rural sostenible. Este folleto se ha editado en 4 idiomas. Castellano, inglés, francés y alemán. Descarga aquí la versión en castellano y empieza a descubrir los Caminos Naturales y las Vías Verdes.</string>
  <string name="resources__footer"> Toda la información sobre Vías Verdes y Espacios Naturales Protegidos la tienes en http://www.viasverdes.com/REDNATURA2000/
    \n\nY mucho más en: www.viasverdes.com</string>

  <string name="more_info__legal_text">La aplicación para dispositivos móviles “Vías Verdes Andalucía” forma parte del Proyecto de I+D+i de la Agencia de Obra Pública de la Junta de Andalucía denominado “Creación de una plataforma de información territorial y soporte tecnológico de vías verdes en Andalucía. El acceso de la ciudadanía a la sociedad del conocimiento”, implementado por un Equipo de la Universidad de Sevilla, adscrito al Grupo de Investigación “Estudios Geográficos Andaluces” y la Fundación de los Ferrocarriles Españoles a través de su Gerencia de Vías Verdes y Medio Ambiente, y bajo la supervisión de la AOPJA. Este proyecto se enmarca dentro de la Convocatoria de Proyectos I+D+i 2013–2014 realizada por la Consejería de Fomento y Vivienda de la Junta de Andalucía, cofinanciada en un 80% con Fondos FEDER por la Unión Europea.
    \n\nComo introducción a esta temática se enlaza el vídeo producido en este Proyecto sobre Vías Verdes de Andalucía: http://www.viasverdes.com/vvandalucia/video_vvandalucia.asp
    \n\nEn relación con el medio ambiente se recuerda la obligación de respetar la naturaleza, evitar molestias a la fauna y alteraciones a la flora, bienes y elementos geológicos y culturales. No arroje residuos, vertidos o cualquier otra forma de contaminantes. No recoja minerales, rocas, plantas o animales. Observe todas las recomendaciones y normas de los espacios por donde discurren las vías verdes para su plena conservación y disfrute.
    \n\n\n<b>Cláusula de exención de responsabilidad</b>
    \n\nEsta aplicación para dispositivos móviles es de carácter meramente informativo. Puede existir alguna información no completamente exhaustiva, exacta o actualizada. En ella se facilitan vínculos a páginas externas, a direcciones de interés y otras, sobre las que los autores no tienen control directo, y respecto de las cuales se declina toda responsabilidad. Tampoco se puede garantizar que las disposiciones legales disponibles en línea por terceros se atengan exactamente a textos normativos oficiales. Técnicamente, indicar que los límites de los elementos representados tienen un carácter aproximado y su precisión puede variar en función de la escala y la información de partida disponible.
    \n\nEs por ello que las entidades participantes en la aplicación declinan cualquier responsabilidad en cuanto a posibles inexactitudes u omisiones y posibles daños o perjuicios derivados del uso de la misma. Igualmente no se hacen responsables de las incidencias que puedan ocurrir durante el recorrido por los itinerarios.
    \n\nLos usuarios deberán guardar la debida diligencia en aspectos de seguridad, salud y respeto a la normativa vigente, haciendo uso de la aplicación en las vías verdes y su entorno debidamente preparados y equipados. Se ruega la máxima atención en zonas de cruces con otras vías y carreteras, o de posible tránsito de personas, animales y/o vehículos, intercepción o choques con elementos móviles o fijos en las vías verdes, riesgo de caídas o accidentes. En caso necesario utilice el teléfono de emergencias 112.
    \n\n\n<b>Propiedad intelectual</b>
    \n\nTodos los contenidos de esta aplicación, ya sean textos, fotografías, imágenes, dibujos, audio, vídeo, software, logotipos o diseño, están protegidos por la normativa de Propiedad Intelectual e Industrial y en particular por el real Decreto Legislativo 1/96, de 12 de abril, por el que se aprueba el Texto Refundido de la Ley de Propiedad Intelectual, y la Ley 18/2006, de 5 de junio, por la que se amplían los medios de tutela de los derechos de propiedad intelectual e industrial y se establecen normas procesales para facilitar la aplicación de diversos reglamentos comunitarios.
    \n\nLos derechos sobre tales contenidos pertenecen a sus respectivos autores. El acceso a este material no supondrá en forma alguna licencia para su reproducción y/o distribución. El usuario se compromete a usar esta aplicación móvil exclusivamente para uso personal.</string>

  <string name="more_info__about__project">El proyecto</string>
  <string name="more_info__about__project_1"><b>“Vías Verdes y Red Natura 2000: Divulgación de Espacios Naturales Protegidos y Geoparques a través de la Red Estatal de Vías Verdes”</b> es un proyecto que desarrolla la Fundación de los Ferrocarriles Españoles con el apoyo de la Fundación Biodiversidad del Ministerio para la Transición Ecológica. Su objetivo fundamental es la integración y puesta en valor de la biodiversidad en el entorno de las vías verdes.
    \n\nLas <b>Vías Verdes</b> son infraestructuras ferroviarias recicladas como itinerarios no motorizados que articulan una oferta turística sostenible en el territorio. Ya existen más de 2.600 km de Vías Verdes en todo el territorio estatal. Frecuentemente atraviesan Espacios Naturales Protegidos, Red Natura 2000 y Geoparques, pero hasta el momento no había existido una integración y puesta en valor de este patrimonio natural en el entorno de las vías verdes de manera específica y detallada.
    \n\nGracias a este proyecto se desarrollan las siguientes acciones:</string>
  <string name="more_info__about__project_2">&#8226; <b>Inventario de Espacios Naturales, Red Natura 2000 y red de Geoparques.</b> Para ello se ha realizado:</string>
  <string name="more_info__about__project_3">&#8226; Sistema de Información Geográfica sobre Espacios Naturales Protegidos y vías verdes que ha dado como resultado el Mapa con las diferentes capas de información geográfica ambiental y de los itinerarios.
    \n\n&#8226; Experiencia piloto <b>“Tu Vía Verde y sus Espacios Naturales Protegidos: Contribuyendo al conocimiento”. Participación</b> de los ciudadanos a través de plataformas de <b>Ciencia Ciudadana</b>. ¿Participas?</string>
  <string name="more_info__about__project_4">&#8226; <b>Publicación online de toda la información de carácter ambiental</b> en el nuevo microsite www.viasverdesyrednatura2000.com y en www.viasverdes.com
  \n\n&#8226; <b>APP “Vías Verdes y Red Natura 2000”</b> para dispositivos Android y realización de un vídeo elaborado con drones.
  \n\n&#8226; <b>Acciones y materiales divulgativos:</b> 2 Campañas de sensibilización aprovechando hitos del calendario como el Día de las Vías Verdes y la Semana de los Geoparques Europeos.
  \n\n&#8226; Además, campañas en las redes sociales, notas de prensa, publicación de noticias, así como edición y producción de otros materiales como mochilas y un folleto.</string>
  <string name="more_info__about__vv">Las Vías Verdes y los Espacios Naturales Protegidos en CIFRAS</string>
  <string name="close">Cerrar</string>
</resources>
