<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.activity.MainActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin__default">

    <TextView
      style="@style/Text_Detail_Section"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin__big"
      android:text="@string/more_info__about__project"
      android:textAllCaps="true" />

    <TextView
      style="@style/Text_Normal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin__small"
      android:paddingStart="@dimen/margin__default"
      android:text="@string/more_info__about__project_1" />

    <TextView
      style="@style/Text_Normal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="@dimen/margin__small"
      android:paddingStart="@dimen/margin__default"
      android:text="@string/more_info__about__project_2" />

    <TextView
      style="@style/Text_Normal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:layout_marginTop="@dimen/margin__small"
      android:paddingStart="@dimen/margin__default"
      android:text="@string/more_info__about__project_3" />

    <TextView
      style="@style/Text_Normal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="@dimen/margin__default"
      android:paddingStart="@dimen/margin__default"
      android:autoLink="all"
      android:textColorLink="@color/colorPrimary"
      android:text="@string/more_info__about__project_4" />

    <TextView
      style="@style/Text_Detail_Section"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin__map"
      android:text="@string/more_info__about__vv"
      android:textAllCaps="true" />

    <ImageView
      android:layout_width="128dp"
      android:layout_height="128dp"
      android:layout_gravity="center_horizontal"
      android:layout_margin="@dimen/margin__map"
      android:src="@drawable/working" />

  </LinearLayout>
</android.support.v4.widget.NestedScrollView>