<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.activity.MainActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin__default">

    <androidx.cardview.widget.CardView
      android:id="@+id/resources__container__rednatura2000"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/white"
      android:foreground="?android:attr/selectableItemBackground"
      app:cardCornerRadius="7dp"
      tools:visibility="visible">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
          android:id="@+id/resources__label__rednatura2000_title"
          style="@style/Text_Info_Title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/margin__small"
          android:text="@string/resources__vv_y_enp__title"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/resources__label__rednatura2000_text"
          style="@style/Text_Normal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/margin__default"
          android:padding="@dimen/margin__default"
          android:text="@string/resources__vv_y_enp__content"
          app:layout_constraintTop_toBottomOf="@id/resources__label__rednatura2000_title" />

        <TextView
          style="@style/Text_Green_Button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/margin__big"
          android:text="@string/see_in_youtube"
          android:background="@drawable/bg__primary_dark__rounded"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/resources__label__rednatura2000_text" />

      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:id="@+id/resources__container__report"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin__default"
      android:background="@color/white"
      android:foreground="?android:attr/selectableItemBackground"
      app:cardCornerRadius="7dp"
      tools:visibility="gone">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
          android:id="@+id/resources__label__report"
          style="@style/Text_Info_Title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/margin__small"
          android:text="@string/resources__report__title"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/resources__label__report_text"
          style="@style/Text_Normal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/margin__default"
          android:padding="@dimen/margin__default"
          android:text="@string/resources__report__content"
          app:layout_constraintTop_toBottomOf="@id/resources__label__report" />

        <TextView
          style="@style/Text_Green_Button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/margin__big"
          android:text="@string/download_pdf"
          android:background="@drawable/bg__primary_dark__rounded"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/resources__label__report_text" />

      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:id="@+id/resources__container__mapa"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin__default"
      android:background="@color/white"
      android:foreground="?android:attr/selectableItemBackground"
      app:cardCornerRadius="7dp"
      tools:visibility="gone">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
          android:id="@+id/resources__label__mapa"
          style="@style/Text_Info_Title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/margin__small"
          android:text="@string/resources__vv_y_2000__title"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/resources__label__mapa_text"
          style="@style/Text_Normal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/margin__default"
          android:padding="@dimen/margin__default"
          android:text="@string/resources__vv_y_2000__content"
          app:layout_constraintTop_toBottomOf="@id/resources__label__mapa" />

        <TextView
          style="@style/Text_Green_Button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/margin__big"
          android:text="@string/download_pdf"
          android:background="@drawable/bg__primary_dark__rounded"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/resources__label__mapa_text" />

      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:id="@+id/resources__container__camino"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin__default"
      android:background="@color/white"
      android:foreground="?android:attr/selectableItemBackground"
      app:cardCornerRadius="7dp"
      tools:visibility="gone">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
          android:id="@+id/resources__label__camino"
          style="@style/Text_Info_Title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/margin__small"
          android:text="@string/resources__caminos__title"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/resources__label__camino_text"
          style="@style/Text_Normal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/margin__default"
          android:padding="@dimen/margin__default"
          android:text="@string/resources__caminos__content"
          app:layout_constraintTop_toBottomOf="@id/resources__label__camino" />

        <TextView
          style="@style/Text_Green_Button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/margin__big"
          android:text="@string/download_pdf"
          android:background="@drawable/bg__primary_dark__rounded"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/resources__label__camino_text" />

      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
      style="@style/Text_Normal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin__big"
      android:autoLink="web"
      android:gravity="center_horizontal"
      android:paddingEnd="@dimen/margin__default"
      android:paddingStart="@dimen/margin__default"
      android:text="@string/resources__footer"
      android:textColorLink="@color/colorPrimary" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/margin__big"
      android:orientation="horizontal">

      <ImageView
        android:id="@+id/resources__btn__facebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:padding="16dp"
        android:src="@drawable/ic__facebook" />

      <ImageView
        android:id="@+id/resources__btn__twitter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:padding="16dp"
        android:src="@drawable/ic__twitter" />

      <ImageView
        android:id="@+id/resources__btn__instagram"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:padding="16dp"
        android:src="@drawable/ic__instagram" />

      <ImageView
        android:id="@+id/resources__btn__youtube"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:padding="16dp"
        android:src="@drawable/ic__youtube" />
    </LinearLayout>

  </LinearLayout>
</androidx.core.widget.NestedScrollView>